adding disputes view
