# src/modules/disputes/dispute.routes.js
@@ -3,18 +3,36 @@ import disputeController from "./dispute.controllers.js";
 import jwtUtils from "../../middlewares/jwt.middleware.js";
 
 const router = express.Router();
-
-// open dispute should be for `users`
 router.post("/", jwtUtils.authenticateJwt, disputeController.openDispute);
-// this for all parties depending on the role and id
+
+//example filters
+//?status=1&orderId=1&userId=hashedId&status=1&resolution=1
 router.get(
-  "/",
+  "/provider",
   jwtUtils.authenticateJwt,
   disputeController.listDisputesProvider,
 );
 
+//example filters
+//?status=1&orderId=1&userId=hashedId&status=1&resolution=1&serviceProviderId=id
+router.get(
+  "/client",
+  jwtUtils.authenticateJwt,
+  disputeController.listDisputesClient,
+);
+
+//example filters
+//?status=1&orderId=1&userId=hashedId&status=1&resolution=1&serviceProviderId=id
+router.get(
+  "/admin",
+  jwtUtils.authenticateJwt,
+  disputeController.listDisputesAdmin,
+);
+
 router.get("/:id", disputeController.getDispute);
+
 router.patch("/:id/review", disputeController.markInReview);
+
 router.patch("/:id/resolve", disputeController.resolveDispute);
 
 export default router;
