# src/openapi/openapi.yaml
@@ -17,6 +17,12 @@ components:
       bearerFormat: JWT
 
 paths:
+  /dispute/provider:
+    $ref: "../modules/disputes/dispute.swagger.yaml#/~1dispute~1provider"
+  /dispute/client:
+    $ref: "../modules/disputes/dispute.swagger.yaml#/~1dispute~1client"
+  /dispute/admin:
+    $ref: "../modules/disputes/dispute.swagger.yaml#/~1dispute~1admin"
   /notification:
     $ref: "../modules/notification/notification.swagger.yaml#/~1notification"
   /notification/{id}:
